--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - The moon of the whole month</title>
+  <title>The moon of the whole month</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div id="ex3"> THIS </div>
+<div id="ex3"> Moon Calendar </div>
 
 
 
