--- a/moon-calendar/index.html
+++ b/moon-calendar/index.html
@@ -36,8 +36,8 @@
 
 
 
-<br><br><a target="_parent" style="font-family:sans-serif; font-size: 18px;color:black" href="http://www.wdisseny.com/lluna/?lang=en#ex_03">See on API page </a>
-<br><br><br><br><br><br>
+<!-- <br><br><a target="_parent" style="font-family:sans-serif; font-size: 18px;color:black" href="http://www.wdisseny.com/lluna/?lang=en#ex_03">See on API page </a>
+<br><br><br><br><br><br> -->
 <!-- partial -->
   <script  src="./script.js"></script>
 
