--- a/D20/index.html
+++ b/D20/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>The moon of the whole month</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
 <div class="content">
   <div class="die">
     <figure class="face face-1"></figure>
@@ -48,3 +57,8 @@
   <li><a href="19">19</a></li>
   <li><a href="20">20</a></li>
 </ul>
+  
+<script  src="./script.js"></script>
+
+</body>
+</html>
