--- a/D20/index.html
+++ b/D20/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>The moon of the whole month</title>
+  <title>D20 roll</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
