--- a/roll-a-die/dice/index.html
+++ b/roll-a-die/dice/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="margin: 0">
+<body>
     <!--div id="control_panel" class="control_panel">
         <h6><img src="../favicon.ico" style="vertical-align: middle"></img> <a href="..">teal</a> dice</h6>
         <p id="loading_text">Loading libraries, please wait a bit...</p>
