--- a/roll-a-die/dice/index.html
+++ b/roll-a-die/dice/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="center_field">
-            <input type="text" id="set" value="d6"></input><br/>
+            <input type="text" id="set" value="d4 + d6 + d8 + d12 + d20"></input><br/>
             <button id="clear">clear</button>
             <button style="margin-left: 0.6em" id="throw">throw</button>
         </div>
